Added personal text

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Lindsey Satterfield's Profile</title>
+  <title>Lindsey's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -11,13 +11,13 @@
     <div class="main-nav">
         <ul class="nav">
           <li class="name">Lindsey</li>
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#">Experience</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/Lindsey project 1.jpg" alt="Lindsey at a wedding" class="profile-image">
+      <img src="images/Lindsey project 1.jpg" alt="Lindsey as a Memoji" class="profile-image">
       <h1 class="tag name">Hello World, I’m Lindsey!</h1>
       <p class="tag location">Catch me in Nashville, Tennessee.</p>
     </header>
@@ -25,19 +25,19 @@
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
+        <p>As someone who has always had an interest in technology, I am finally jumping into the field. After working in video prodution for years, web development has my interest at an all time high. I am very excited to create beautiful and responsive websites!</p>
+        <p>I have a major passion for photography and the great outdoors. You can find me outside with my dogs and a camera when not learning code.</p>
       </div> 
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p>I want to become proficient in web development by learning these languages:   </p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>After mastering these skills, I would like to work as a front end developer for a company that needs assistance in creating a large web and mobile web presence.</p>
       </div> 
 
     </main>
@@ -45,7 +45,7 @@
       <ul>
         <li><a href="#" class="social twitter">Twitter</a></li>
         <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://github.com/lindseysatterfield" target="_blank" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2018, Lindsey Satterfield</p>
     </footer>
