--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>Lindsey's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
+  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
+</head>
   <body>
 
     <div class="main-nav">
@@ -47,7 +48,7 @@
         <li><a href="#" class="social linkedin">LinkedIn</a></li>
         <li><a href="https://github.com/lindseysatterfield" target="_blank" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2018, Lindsey Satterfield</p>
+      <p class="copyright">Copyright 2018, Lindsey</p>
     </footer>
   </body>
   </html>
