Changed colors and card size

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <p class="tag location">Catch me in Nashville, Tennessee.</p>
     </header>
 
+<!-- left card -->
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
@@ -30,6 +31,7 @@
         <p>I have a major passion for photography and the great outdoors. You can find me outside with my dogs and a camera when not learning code.</p>
       </div> 
 
+<!-- right card -->
       <div class="card">
         <h2>Goals</h2>
         <p>I want to become proficient in web development by learning these languages:   </p>
@@ -48,7 +50,7 @@
         <li><a href="#" class="social linkedin">LinkedIn</a></li>
         <li><a href="https://github.com/lindseysatterfield" target="_blank" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2018, Lindsey</p>
+      <p class="copyright">&copy; 2018, Lindsey</p>
     </footer>
   </body>
   </html>
