--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul class="nav">
           <li class="name">Lindsey</li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li><a href="experience.html">Experience</a></li>
         </ul>
     </div>
 
