Removed Twitter & Linkedin html links

--- a/experience.html
+++ b/experience.html
@@ -19,7 +19,7 @@
     <header>
         <img src="images/Lindsey project 1.jpg" alt="Lindsey as a Memoji" class="profile-image">
         <h1 class="tag name">Hello World, I’m Lindsey!</h1>
-        <p class="tag location">Catch me in Nashville, Tennessee.</p>
+        <p class="tag location">Take a look at my experience.</p>
     </header>
     
     <!-- left card -->
@@ -27,7 +27,7 @@
         <div class="card">
             <img src="images/UT logo.png" alt="UT logo">
             <ul>
-                <li>2013 B.S. in Communications with a major in Journalism & Electronic Media</li>
+                <li>2013 B.S. in Communications majoring in Journalism & Electronic Media</li>
                 <li>After graduation, I put my digital content skills to use in Nashville in video production</li>
                 <li>Problem solving and efficiency were important aspects of my job</li>
             </ul>
@@ -49,8 +49,7 @@
     </main>
         <footer>
           <ul>
-            <li><a href="#" class="social twitter">Twitter</a></li>
-            <li><a href="#" class="social linkedin">LinkedIn</a></li>
+            
             <li><a href="https://github.com/lindseysatterfield" target="_blank" class="social github">Github</a></li>
           </ul>
           <p class="copyright">&copy; 2018, Lindsey</p>
