Formatted image names and colors

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <header>
-      <img src="images/Lindsey project 1.jpg" alt="Lindsey as a Memoji" class="profile-image">
+      <img src="images/Lindsey-project-1.jpg" alt="Lindsey as a Memoji" class="profile-image">
       <h1 class="tag name">Hello World, I’m Lindsey!</h1>
       <p class="tag location">Catch me in Nashville, Tennessee.</p>
     </header>
