--- a/experience.html
+++ b/experience.html
@@ -42,7 +42,7 @@
             <ul>
                 <li>Front End Web Developer Techdegree currently in progress</li>
                 <li>HTML, CSS, and Javascript languages learned and practiced</li>
-                <li>9 projects will be completed by Team Treehouse instructors</li>
+                <li>9 projects will be completed and then graded by Team Treehouse instructors</li>
             </ul>
         </div> 
     
